cmake_minimum_required (VERSION 2.6)
project (Meanshift)
find_package( OpenCV REQUIRED )
add_executable(Meanshift_segment meanshift_segment.cpp)
target_link_libraries( Meanshift_segment ${OpenCV_LIBS} )
add_executable(Meanshift_segment_1phase meanshift_segment_1phase.cpp)
target_link_libraries( Meanshift_segment_1phase ${OpenCV_LIBS} )
add_executable(Meanshift_segment_2phases meanshift_segment_2phases.cpp)
target_link_libraries( Meanshift_segment_2phases ${OpenCV_LIBS} )
add_executable(background-subtraction background-subtraction.cpp)
target_link_libraries( background-subtraction ${OpenCV_LIBS} )


find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()
